--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.username=omdev
+spring.datasource.password=omdev
+spring.datasource.url=jdbc:mysql://localhost:33060/world
 
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
